2002-05-10  jacob berkman  <jacob@ximian.com>

	* mime-type-info.c (mime_category_info_get_full_description): 
	(mime_category_info_get_full_name): work around a gcc 2.96 bug
	(fixes #77121)

2002-05-08  Jody Goldberg <jody@gnome.org>

	* file-types-capplet.c (cb_file_type_dialog_response) : fix path to
	help.

	http://bugzilla.gnome.org/show_bug.cgi?id=81030
	* service-info.c (fill_service_apps) : we don't own the app, don't
	  free it.

2002-04-30  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=80327
	* service-edit-dialog.c (program_changed_cb) : Doh! If the current
	tree selection is not a service then the app can be null.

2002-04-26  Jody Goldberg <jody@gnome.org>

	* service-edit-dialog.c (populate_app_list) : always populate the
	  details fields so a user can see what they selected.
	(program_changed_cb) : ditto.

	* service-info.c (fill_service_apps) : fix to not use freed memory.

2002-04-23  Jody Goldberg <jody@gnome.org>

	* model-entry.c (model_entry_save) : wrap in vfs freeze/unfreeze.
	(model_entry_append_to_dirty_list) : delete.
	(model_entry_remove_from_dirty_list) : delete.
	(model_entry_commit_dirty_list) : delete.
	(model_entry_append_to_delete_list) : delete.
	(model_entry_commit_delete_list) : delete.

	* mime-category-edit-dialog.c (store_data) : make this instant apply.
	* mime-edit-dialog.c (store_data) : ditto.
	* service-edit-dialog.c (store_data) : ditto.

	* file-types-capplet.c (cb_file_type_dialog_response) : add help and
	  change the buttons to help & close to be HIG compliant.
	(remove_cb) : make removal apply instantly.
	* file-types-properties.glade : Make the buttons Help & Close

2002-04-22  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (validate_data) : tidy up.
	(choose_cat_cb) : reorder buttons to be hig compliant.
	(mime_edit_dialog_init) : ditto.
	* service-edit-dialog.c (service_edit_dialog_init) : ditto.
	* mime-category-edit-dialog.c (mime_category_edit_dialog_init) : ditto.
