@@ -1,3 +1,13 @@
+2002-05-08  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=17728
+	(mime_type_info_save): a patch inspired by Archit Baweja's proposal.
+
+2002-05-09  Archit Baweja  <bighead@users.sourceforge.net>
+
+	* mime-type-info.c (mime_type_info_set_file_extensions): free the old
+	list.
+
 2002-05-10  jacob berkman  <jacob@ximian.com>
 
 	* mime-type-info.c (mime_category_info_get_full_description): 
